--- a/unaspmobile/apps/unaspmobile/common/index.html
+++ b/unaspmobile/apps/unaspmobile/common/index.html
@@ -18,7 +18,7 @@
 <script src="jqueryMobile/jquery.mobile-git.js"></script>
 </head>
 <body style="display: none;">
-	<div style="display: none"
+	<div style="display:none"
 		class="messages ui-icon-alert ui-btn-icon-left" id="messages">
 		<p></p>
 	</div>
@@ -29,24 +29,13 @@
 		<div class="">
 			<ul id="outro" class="ui-grid-d ui-content botoes-menu">
 				<li class="ui-block-a effect "></li>
-				<li class="ui-block-a"><a href="" data-transition="none"
-					data-ajax="false"> <img src="images/logo_mini.png"
-						name="logo_mini"></a></li>
-				<li class="ui-block-b menu-perfil"><a href="#perfil"
-					data-ajax="false" data-transition="none"><img
-						src="images/icones/user.png" name="user"></a></li>
-				<li class="ui-block-c"><a href="#notas" data-ajax="false"
-					data-transition="none"><img src="images/icones/notas.png"
-						name="notas"></a></li>
-				<li class="ui-block-d"><a href="#financeiro" data-ajax="false"
-					data-transition="none"><img src="images/icones/financeiro.png"
-						name="financeiro"></a></li>
-				<li class="ui-block-e"><a href="#ramais" data-ajax="false"><img
-						src="images/icones/ramal.png" name="ramal"></a></li>
+				<li class="ui-block-a"><a href="" data-transition="none" data-ajax="false"> <img src="images/logo_mini.png" name="logo_mini"></a></li>
+				<li class="ui-block-b menu-perfil"><a href="#perfil" data-ajax="false" data-transition="none"><img src="images/icones/user.png" name="user"></a></li>
+				<li class="ui-block-c"><a href="#notas" data-ajax="false" data-transition="none"><img src="images/icones/notas.png" name="notas"></a></li>
+				<li class="ui-block-d"><a href="#financeiro" data-ajax="false" data-transition="none"><img src="images/icones/financeiro.png" name="financeiro"></a></li>
+				<li class="ui-block-e"><a href="#ramais" data-ajax="false"><img src="images/icones/ramal.png" name="ramal"></a></li>
 			</ul>
-
 		</div>
-
 	</div>
 	<!-- /header fixo -->
 
@@ -54,8 +43,7 @@
 	<div data-role="footer" data-position="fixed" id="footer-fixed">
 		<h6 style="color: transparent">dfgdfg</h6>
 		<div class="bar">
-			<a href="#" data-role="button" id="button"><img
-				src="images/bar.png"></a>
+			<a href="#" data-role="button" id="button"><img src="images/bar.png"></a>
 		</div>
 	</div>
 	<!-- /footer fixo -->
@@ -67,25 +55,20 @@
 				<span class="part1">UNASP</span><span class="part2">MOBILE</span>
 				<h5>Engenheiro Coelho</h5>
 			</div>
-			<div class="back-login">
-				<img src="images/shape.png">
-			</div>
-			<div class="logo">
-				<img src="images/logo_unasp.png">
-			</div>
+			<div class="back-login"><img src="images/shape.png"></div>
+			<div class="logo"><img src="images/logo_unasp.png"></div>
 		</div>
-		<div data-role="content" id="content-login" style="padding: 15px">
-
-			<div class="loadMobile">
-				<img src="images/icones/loading.gif">
-				<h3></h3>
+		<div data-role="content" id="content-login" style="padding: 15px">	
+		
+		<!-- Loading Form -->
+			<div  class="loadMobile"><img src="images/icones/loading.gif">
+			<h3></h3>
 			</div>
-
-			<form id="form" action="">
-				<label for="text">Login:</label><input type="text" name="user"
-					id="user"> <label for="text">Senha:</label><input
-					type="password" name="password" id="password"> <a href="#"
-					data-role="button" id="entrar">Entrar</a>
+		<!-- /Loading Form -->
+			
+			<form id="form" action="" style="display:none;">
+				<label for="text">Login:</label><input type="text" name="user" id="user"> 
+				<label for="text">Senha:</label><input type="password" name="password" id="password"> <a href="#" data-role="button" id="entrar">Entrar</a>
 			</form>
 		</div>
 	</div>
@@ -93,8 +76,7 @@
 
 	<!-- PERFIL -->
 	<div data-role="page" id="perfil" class="children">
-		<div data-role="header" class="header-pages" data-position="fixed"
-			style="">
+		<div data-role="header" class="header-pages" data-position="fixed">
 			<ul class="titulo">
 				<li><img src="images/icones/user.png"></li>
 				<li>Perfil</li>
@@ -117,7 +99,6 @@
 						</ul>
 					</div>
 				</div>
-				<br>
 				<div class=" ui-block-a options">
 					<div data-role="collapsible" data-collapsed-icon="carat-d"
 						data-expanded-icon="carat-u">
@@ -126,7 +107,6 @@
 						</ul>
 					</div>
 				</div>
-				<br>
 				<div class=" ui-block-a options">
 					<div data-role="collapsible" data-collapsed-icon="carat-d"
 						data-expanded-icon="carat-u">
@@ -143,15 +123,13 @@
 
 	<!-- NOTAS -->
 	<div data-role="page" id="notas" class="children">
-		<div data-role="header" id="header" data-position="fixed"
-			class="header-pages">
+		<div data-role="header" id="header" data-position="fixed" class="header-pages">
 			<ul class="titulo">
 				<li><img src="images/icones/notas.png"></li>
 				<li>Notas e Faltas</li>
 			</ul>
 		</div>
-		<div data-role="content" class="content-unaspmobile"
-			style="padding: 15px">
+		<div data-role="content" class="content-unaspmobile" style="padding: 15px">
 			<div class="seleciona_curso" style="margin: 0; position: relative;">
 				<div class="ui-grid-solo">
 					<div class="ui-block-a">
@@ -177,8 +155,6 @@
 						</select>
 					</div>-->
 				</div>
-
-
 			</div>
 			<div class="cabecalho_cursos">
 				<table style="width: 100%; padding: 5px;" class='ui-responsive'>
@@ -188,11 +164,8 @@
 						<td width="20%" style="text-align: center"><h3>Faltas</h3></td>
 					</tr>
 				</table>
-
 			</div>
-			<div id="mostra_detalhes_curso"
-				style="margin: 0 auto; position: relative;"></div>
-
+			<div id="mostra_detalhes_curso" style="margin: 0 auto; position: relative;"></div>
 		</div>
 	</div>
 	<!-- /NOTAS -->
@@ -200,15 +173,13 @@
 
 	<!-- FINANCEIRO -->
 	<div data-role="page" id="financeiro" class="children">
-		<div data-role="header" id="header" data-position="fixed"
-			class="header-pages">
+		<div data-role="header" id="header" data-position="fixed" class="header-pages">
 			<ul class="titulo">
 				<li><img src="images/icones/financeiro.png"></li>
 				<li>Financeiro</li>
 			</ul>
 		</div>
-		<div data-role="content" class="content-unaspmobile"
-			style="padding: 15px">
+		<div data-role="content" class="content-unaspmobile" style="padding: 15px">
 			<div class="ui-grid-solo">
 				<div class="ui-block-b">
 					<select name="select" id="option-ano">
@@ -223,19 +194,16 @@
 
 	<!-- RAMAIS -->
 	<div data-role="page" id="ramais" class="children">
-		<div data-role="header" id="header" data-position="fixed"
-			class="header-pages">
+		<div data-role="header" id="header" data-position="fixed" class="header-pages">
 			<ul class="titulo">
 				<li><img src="images/icones/ramal.png"></li>
 				<li>Ramais</li>
 			</ul>
 		</div>
-		<div data-role="content" class="content-unaspmobile"
-			style="padding: 15px">
+		<div data-role="content" class="content-unaspmobile" style="padding: 15px">
 			<div class="ui-grid-solo options">
 				<div class=" ui-block-a options">
-					<div data-role="collapsible" data-collapsed-icon="carat-d"
-						data-expanded-icon="carat-u" id="cursos-matriculados">
+					<div data-role="collapsible" data-collapsed-icon="carat-d" data-expanded-icon="carat-u" id="cursos-matriculados">
 						<h3>Diretoria</h3>
 						<ul data-role="listview">
 							<li>Diretor Geral do Campus (PAULO MARTINI) - 9001</li>
@@ -253,46 +221,32 @@
 					</div>
 				</div>
 				<div class=" ui-block-a options">
-					<div data-role="collapsible" data-collapsed-icon="carat-d"
-						data-expanded-icon="carat-u" id="cursos-matriculados">
+					<div data-role="collapsible" data-collapsed-icon="carat-d" data-expanded-icon="carat-u" id="cursos-matriculados">
 						<h3>Informática</h3>
 						<ul data-role="listview" data-inset="true">
 							<li><a href="#">Suporte - 9533/9387/9064</a></li>
-							<li><a href="#">Gerente Sistema Informação (JOEL
-									RIBEIRO) - 9010</a></li>
-							<li><a href="#">Administrador de Redes (ALEXANDRE
-									ALFIERI) - 9411</a></li>
-							<li><a href="#">Gerente de Suporte (GEOVANE OLIARI) -
-									9611</a></li>
+							<li><a href="#">Gerente Sistema Informação (JOEL RIBEIRO) - 9010</a></li>
+							<li><a href="#">Administrador de Redes (ALEXANDRE ALFIERI) - 9411</a></li>
+							<li><a href="#">Gerente de Suporte (GEOVANE OLIARI) - 9611</a></li>
 							<li><a href="#">Analista de Suporte (LUIS SCHUTZ) - 9011</a></li>
-							<li><a href="#">Analista de Suporte (CATI BARRETO) -
-									9364</a></li>
+							<li><a href="#">Analista de Suporte (CATI BARRETO) -9364</a></li>
 							<li><a href="#">Desenvolvimento Web ( ANDREI ) 9609</a></li>
-							<li><a href="#">Coordenação Laboratórios de Educação
-									Básica (HÉBER SOUZA) - 9096</a></li>
-							<li><a href="#">Coordenação Laboratórios de Ensino
-									Superior (ELIAS GOMES) - 9032</a></li>
+							<li><a href="#">Coordenação Laboratórios de Educação Básica (HÉBER SOUZA) - 9096</a></li>
+							<li><a href="#">Coordenação Laboratórios de Ensino Superior (ELIAS GOMES) - 9032</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class=" ui-block-a options">
-					<div data-role="collapsible" data-collapsed-icon="carat-d"
-						data-expanded-icon="carat-u" id="cursos-matriculados">
+					<div data-role="collapsible" data-collapsed-icon="carat-d" data-expanded-icon="carat-u" id="cursos-matriculados">
 						<h3>Tesouraria</h3>
 						<ul data-role="listview">
 							<li><a href="#">Fax - Financeiro - 3858-9095</a></li>
-							<li><a href="#">Gerente Financeiro (SAUL CESÁRIO FRANCA)
-									- 9007</a></li>
-							<li><a href="#">Secretaria Geral Financeiro (ELISÂNGELA
-									ASSIS) - 9092/9307</a></li>
-							<li><a href="#">Gerenciador de Finanças Estudantis
-									(OSVAIR HUNGLAUB) - 9325</a></li>
-							<li><a href="#">Finanças Estudantis Ensino Superior
-									(SIRLENE) - 9559</a></li>
-							<li><a href="#">Finanças Estudantis Ensino Superior -
-									9386/9048/9416</a></li>
-							<li><a href="#">Financeiro Estudantil do Centro de
-									Comunicação - 9595</a></li>
+							<li><a href="#">Gerente Financeiro (SAUL CESÁRIO FRANCA) - 9007</a></li>
+							<li><a href="#">Secretaria Geral Financeiro (ELISÂNGELA ASSIS) - 9092/9307</a></li>
+							<li><a href="#">Gerenciador de Finanças Estudantis (OSVAIR HUNGLAUB) - 9325</a></li>
+							<li><a href="#">Finanças Estudantis Ensino Superior (SIRLENE) - 9559</a></li>
+							<li><a href="#">Finanças Estudantis Ensino Superior -9386/9048/9416</a></li>
+							<li><a href="#">Financeiro Estudantil do Centro de Comunicação - 9595</a></li>
 							<li><a href="#">Cobrança - 9509/9558/9549</a></li>
 							<li><a href="#">Contador (HELDER ÁGUAS) - 9009</a></li>
 							<li><a href="#">Auxiliar Contábil (BEKANG) - 9016</a></li>
@@ -312,20 +266,13 @@
 						data-expanded-icon="carat-u" id="cursos-matriculados">
 						<h3>Tesouraria</h3>
 						<ul data-role="listview">
-
 							<li><a href="#">Fax - Financeiro - 3858-9095</a></li>
-							<li><a href="#">Gerente Financeiro (SAUL CESÁRIO FRANCA)
-									- 9007</a></li>
-							<li><a href="#">Secretaria Geral Financeiro (ELISÂNGELA
-									ASSIS) - 9092/9307</a></li>
-							<li><a href="#">Gerenciador de Finanças Estudantis
-									(OSVAIR HUNGLAUB) - 9325</a></li>
-							<li><a href="#">Finanças Estudantis Ensino Superior
-									(SIRLENE) - 9559</a></li>
-							<li><a href="#">Finanças Estudantis Ensino Superior -
-									9386/9048/9416</a></li>
-							<li><a href="#">Financeiro Estudantil do Centro de
-									Comunicação - 9595</a></li>
+							<li><a href="#">Gerente Financeiro (SAUL CESÁRIO FRANCA) - 9007</a></li>
+							<li><a href="#">Secretaria Geral Financeiro (ELISÂNGELA ASSIS) - 9092/9307</a></li>
+							<li><a href="#">Gerenciador de Finanças Estudantis (OSVAIR HUNGLAUB) - 9325</a></li>
+							<li><a href="#">Finanças Estudantis Ensino Superior (SIRLENE) - 9559</a></li>
+							<li><a href="#">Finanças Estudantis Ensino Superior -9386/9048/9416</a></li>
+							<li><a href="#">Financeiro Estudantil do Centro de Comunicação - 9595</a></li>
 							<li><a href="#">Cobrança - 9509/9558/9549</a></li>
 							<li><a href="#">Contador (HELDER ÁGUAS) - 9009</a></li>
 							<li><a href="#">Auxiliar Contábil (BEKANG) - 9016</a></li>
@@ -345,12 +292,9 @@
 						data-expanded-icon="carat-u" id="cursos-matriculados">
 						<h3>Recursos Humanos</h3>
 						<ul data-role="listview">
-							<li><a href="#">Ger. de Recursos Humanos (MOISÉS A.
-									SOUZA) - 9012</a></li>
-							<li><a href="#">Assistente de Pessoal (TAMIRES/AMARILDO)
-									- 9569</a></li>
-							<li><a href="#">Assistente de Pessoal (TATIANA/SAMARA) -
-									9516</a></li>
+							<li><a href="#">Ger. de Recursos Humanos (MOISÉS A.SOUZA) - 9012</a></li>
+							<li><a href="#">Assistente de Pessoal (TAMIRES/AMARILDO)- 9569</a></li>
+							<li><a href="#">Assistente de Pessoal (TATIANA/SAMARA) -9516</a></li>
 						</ul>
 					</div>
 				</div>
@@ -360,12 +304,9 @@
 						data-expanded-icon="carat-u" id="cursos-matriculados">
 						<h3>Comuni</h3>
 						<ul data-role="listview">
-							<li><a href="#">Ger. de Recursos Humanos (MOISÉS A.
-									SOUZA) - 9012</a></li>
-							<li><a href="#">Assistente de Pessoal (TAMIRES/AMARILDO)
-									- 9569</a></li>
-							<li><a href="#">Assistente de Pessoal (TATIANA/SAMARA) -
-									9516</a></li>
+							<li><a href="#">Ger. de Recursos Humanos (MOISÉS A.SOUZA) - 9012</a></li>
+							<li><a href="#">Assistente de Pessoal (TAMIRES/AMARILDO)- 9569</a></li>
+							<li><a href="#">Assistente de Pessoal (TATIANA/SAMARA)-9516</a></li>
 						</ul>
 					</div>
 				</div>
@@ -381,7 +322,7 @@
 
 
 
-
+<ul>
 
 
 				<li style="background: none"><h3>
