--- a/unaspmobile/apps/unaspmobile/common/index.html
+++ b/unaspmobile/apps/unaspmobile/common/index.html
@@ -29,11 +29,11 @@
 		<div class="">
 			<ul id="outro" class="ui-grid-d ui-content botoes-menu">
 				<li class="ui-block-a effect "></li>
-				<li class="ui-block-a"><a href="" data-transition="none" data-ajax="false"> <img src="images/logo_mini.png" name="logo_mini"></a></li>
-				<li class="ui-block-b menu-perfil"><a href="#perfil" data-ajax="false" data-transition="none"><img src="images/icones/user.png" name="user"></a></li>
-				<li class="ui-block-c"><a href="#notas" data-ajax="false" data-transition="none"><img src="images/icones/notas.png" name="notas"></a></li>
-				<li class="ui-block-d"><a href="#financeiro" data-ajax="false" data-transition="none"><img src="images/icones/financeiro.png" name="financeiro"></a></li>
-				<li class="ui-block-e"><a href="#ramais" data-ajax="false"><img src="images/icones/ramal.png" name="ramal"></a></li>
+				<li class="ui-block-a"><a href="" data-ajax="false"> <img src="images/logo_mini.png" name="logo_mini"></a></li>
+				<li id="link-perfil" class="ui-block-b menu-perfil"><a  data-ajax="false" href="#perfil" ><img src="images/icones/user.png" name="user"></a></li>
+				<li id="link-notas" class="ui-block-c"><a href="#notas"  data-ajax="false"><img src="images/icones/notas.png" name="notas"></a></li>
+				<li id ="link-financeiro" class="ui-block-d"><a href="#financeiro"  data-ajax="false" ><img src="images/icones/financeiro.png" name="financeiro"></a></li>
+				<li id="link-ramais" class="ui-block-e"><a href="#ramais"  data-ajax="false"><img src="images/icones/ramal.png" name="ramal"></a></li>
 			</ul>
 		</div>
 	</div>
@@ -49,7 +49,7 @@
 	<!-- /footer fixo -->
 
 	<!-- LOGIN -->
-	<div data-role="page" id="login" class="children">
+	<div data-role="page" id="login"  >
 		<div data-role="header" id="header-login" style="z-index: 9999">
 			<div class="top-login">
 				<span class="part1">UNASP</span><span class="part2">MOBILE</span>
