--- a/unaspmobile/apps/unaspmobile/common/index.html
+++ b/unaspmobile/apps/unaspmobile/common/index.html
@@ -88,6 +88,8 @@
 			</ul>
 		</div>
 		<div data-role="content" class="content-unaspmobile">
+
+		
 			<div class="indentify">
 				<ul data-role="listview" data-inset="true">
 					<li><img src="images/icones/user.png">
@@ -122,8 +124,8 @@
 					</div>
 				</div>
 			</div>
+			</div>
 		</div>
-	</div>
 	<!-- /PERFIL -->
 
 	<!-- NOTAS -->
@@ -159,6 +161,9 @@
 					</div>-->
 				</div>
 			</div>
+		<div style="width:10px;"class="arrow-back">
+ 			 <a href="#" class="ui-btn ui-icon-arrow-l ui-btn-icon-left limpar-detalhes" style="background-color: rgba(219, 218, 216, 0); border-color: rgba(219, 218, 216, 0)"></a>
+			</div>
 			<div class="cabecalho_cursos" style="display:none">
 				<table style="width: 100%;" class='ui-responsive' >
 					<tr style="color: #676665">
@@ -169,6 +174,21 @@
 				</table>
 			</div>
 			<div id="mostra_detalhes_curso" style="margin: 0 auto; position: relative;"></div>
+			<div class="detalhe_disciplina">
+				<table  id="table-reflow"
+					class="ui-responsive" style="width: 100%; padding: 5px; text-align: center;">
+					<thead>
+						<tr>
+							<th>Data</th>
+							<th>Descrição</th>
+							<th>Nota</th>
+							<th>Peso</th>
+						</tr>
+					</thead>
+					<tbody class="detalhes" style="width: 100%">
+					</tbody>
+				</table>
+			</div>
 		</div>
 	</div>
 	<!-- /NOTAS -->
